--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -759,5 +759,11 @@ button {
   background-color: #ffff;
 }
 
+/* Pillowfort */
+.button.button-pillowfort {
+  color: #000000;
+  background-color: #ffff;
+}
+
 
 
