--- a/public/css/littlelink.css
+++ b/public/css/littlelink.css
@@ -89,13 +89,17 @@ body {
 h1 {
   margin-top: 0;
   margin-bottom: 16px;
-  font-weight: 800; }
-h1 { font-size:24px; line-height: 64px; letter-spacing: 0;}
+  font-weight: 800;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+h1 { font-size: 24px; line-height: 1.2; letter-spacing: 0;}
 
 
 /* Larger than phablet */
 @media (min-width: 550px) {
-  h1 { font-size: 48px; line-height: 96px;}
+  h1 { font-size: 48px; line-height: 1.2;}
 }
 
 p {
